--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>JavaScript Strings Code-along</title>
+    <title>JavaScript Class Relations Lab</title>
     <meta name="description" content="Class Relations in the Learn.co curriculum">
     <meta name="author" content="Flatiron School">
 
