--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
 
     <title>Bind, Call and Apply Lab</title>
     <meta name="description" content="Bind, Call and Apply Lab in the Learn.co curriculum">
+
     <meta name="author" content="Flatiron School">
 
     <link rel="stylesheet" href="node_modules/mocha/mocha.css">
@@ -16,7 +18,9 @@
 
     <!-- Include Mocha and set it up for BDD-style testing. -->
     <script src="node_modules/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd');</script>
+    <script>
+      mocha.setup('bdd');
+    </script>
 
     <!-- Include Chai as the matcher library. -->
     <script src="node_modules/chai/chai.js"></script>
@@ -36,6 +40,7 @@
     <script src="node_modules/learn-browser/learnBrowser.min.js"></script>
 
     <!-- Run the test suite automatically when the page loads. -->
-    
+
   </body>
+
 </html>
